# surveylang

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: caso01.py
src/surveylang/common/: enumerators.py
src/surveylang/logicelements/: logicparser.py
src/surveylang/models/: instrument_component_base.py  instrument_components.py  responses.py
tests/: logic_statements  test_logicparser.py  test_model_creation.py  test_responses.py
