[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "surveylang"
version = "0.1.0"
authors = [
  { name="Gustavo Vaccaro", email="fabianvaccaro@uma.es" },
]
description = "A simple survey language"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/fabianvaccaro/surveylang"
"Bug Tracker" = "https://github.com/fabianvaccaro/surveylang/issues"